Text alignment fixed

--- a/style.css
+++ b/style.css
@@ -190,6 +190,9 @@ body{
     justify-content: end;
     text-align: right;
 }
+.digits-string{
+    text-align: right;
+}
 .keypad{
     display: grid;
     grid-template-columns: 80px 80px 80px;
